# Event-Driven-Backtester

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
apps/api/: pyproject.toml
apps/api/src/server/: config.py
apps/api/src/server/jobs/: executor.py  tasks.py
apps/api/src/server/models/: bars.py  common.py  portfolio.py  runs.py
apps/api/src/server/observability/: logger.py
apps/api/src/server/repositories/: bars_repo.py  runs_repo.py  state_repo.py
apps/api/src/server/routers/: bars.py  runs.py
apps/api/src/server/services/: bar_stream.py  portfolio_engine.py  run_manager.py  strategy_engine.py
apps/api/src/server/utils/: idempotency.py  pagination.py
configs/: example_pairs.json
examples/: run_sma.py
examples/data/: SPY.csv
research/templates/: intraday_mr_outline.md  pairs_outline.md  research_note_template.md
scripts/: make_dataset.py  run_backtest.py
src/backtester/: __about__.py  bars.py  bench.py  costs.py  datasets.py  engine.py  events.py  metrics.py  simulator.py  utils.py  validation.py
src/backtester/backtest/: engine.py  metrics.py
src/backtester/data/: csv_data_handler.py  data_handler.py
src/backtester/strategy/: sma_crossover.py  strategy.py
src/backtester/utils/: queue.py
src/edbt/: __about__.py  __init__.py
src/edbt/backtest/: __init__.py  engine.py  logger.py  metrics.py
src/edbt/data/: __init__.py
src/edbt/execution/: __init__.py  broker_sim.py  execution_handler.py  fees.py  slippage.py
tests/: test_bars.py  test_metrics.py  test_validation.py
(+11 files in other folders)
