[project]
name = "trading-lab-api"
version = "0.1.0"
description = "Backtest API (FastAPI) for event-driven backtester"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "pandas>=2.2",
  "pyarrow>=16.0",
  "duckdb>=1.0",         # optional, nice for Parquet scanning
  "python-dateutil>=2.9"
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","UP"]